--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ authors = [
 license = { text = "MIT" }
 keywords = ["python", "textual", "tui", "window", "widget"]
 dependencies = [
-    "textual>=3.2.0",
+    "textual>=3.3.0",
+    "textual-autocomplete>=4.0.4",
     "textual-pyfiglet>=0.8.6",
-    "textual-slidecontainer>=0.4.1",
-    "textual-window>=0.3.4",
+    "textual-slidecontainer>=0.4.2",
+    "textual-window>=0.3.5",
 ]
 
 classifiers = [
