--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,10 @@ keywords = ["python", "textual", "tui", "window", "widget"]
 dependencies = [
     "textual>=3.3.0",
     "textual-autocomplete>=4.0.4",
-    "textual-pyfiglet>=0.8.6",
-    "textual-slidecontainer>=0.4.2",
+    "textual-coloromatic>=0.2.2",
+    "textual-hires-canvas>=0.8.0",
+    "textual-pyfiglet>=0.9.2",
+    "textual-slidecontainer>=0.5.2",
     "textual-window>=0.3.5",
 ]
 
