--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ keywords = ["python", "textual", "tui", "window", "widget"]
 dependencies = [
     "textual>=3.3.0",
     "textual-autocomplete>=4.0.4",
-    "textual-pyfiglet>=0.8.6",
-    "textual-slidecontainer>=0.4.2",
-    "textual-window>=0.3.5",
+    "textual-coloromatic>=0.2.2",
+    "textual-hires-canvas>=0.8.0",
+    "textual-pyfiglet>=0.9.2",
+    "textual-slidecontainer>=0.5.2",
+    "textual-window>=0.5.1",
 ]
 
 classifiers = [
@@ -57,3 +59,5 @@ line-length = 110
 python_version = "3.10"
 pretty = true
 strict = true
+disallow_untyped_defs = true
+disallow_untyped_calls = true
