--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,20 +3,21 @@ name = "term-desktop"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 authors = [
     { name = "edward-jazzhands", email = "ed.jazzhands@gmail.com" }
 ]
 license = { text = "MIT" }
-keywords = ["python", "textual", "tui", "window", "widget"]
+keywords = ["python", "textual", "tui", "window", "desktop", "shell", "multiplexer", "terminal", "cli", "command-line"]
 dependencies = [
-    "textual>=3.7.1",
+    "ezpubsub>=0.2.0",
+    "textual>=5.3.0",
     "textual-autocomplete>=4.0.4",
-    "textual-coloromatic>=0.2.2",
+    "textual-coloromatic>=1.0.0",
     "textual-hires-canvas>=0.9.0",
-    "textual-pyfiglet>=0.9.2",
-    "textual-slidecontainer>=0.5.2",
-    "textual-window>=0.5.2",
+    "textual-pyfiglet>=1.0.0",
+    "textual-slidecontainer>=1.0.0",
+    "textual-window>=0.8.0",
 ]
 
 classifiers = [
@@ -24,10 +25,6 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3 :: Only",
@@ -35,14 +32,18 @@ classifiers = [
 
 [project.urls]
 Repository = "https://github.com/edward-jazzhands/term-desktop"
-Changelog = "https://github.com/edward-jazzhands/term-desktop/blob/master/Changelog.md"
+Changelog = "https://github.com/edward-jazzhands/term-desktop/blob/master/CHANGELOG.md"
 
 [dependency-groups]
 dev = [
+    "basedpyright>=1.31.2",
     "black>=25.1.0",
     "mypy>=1.15.0",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
     "ruff>=0.11.11",
     "textual-dev>=1.7.0",
+    "tomli>=2.2.1",
 ]
 
 [build-system]
@@ -56,8 +57,14 @@ term-desktop = "term_desktop.main:run"
 line-length = 110
 
 [tool.mypy]
-python_version = "3.10"
 pretty = true
 strict = true
 disallow_untyped_defs = true
 disallow_untyped_calls = true
+
+[tool.basedpyright]
+include = ["src"]
+typeCheckingMode = "strict"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
